--- a/FileExplorer/Views/ShellPage.xaml
+++ b/FileExplorer/Views/ShellPage.xaml
@@ -85,7 +85,7 @@
                             <Setter.Value>
                                 <DataTemplate x:DataType="tabRelated:TabModel">
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="{x:Bind TabDirectory.Name, Mode=OneWay}" />
+                                        <TextBlock Text="{x:Bind TabName, Mode=OneWay}" />
                                     </StackPanel>
                                 </DataTemplate>
                             </Setter.Value>
