Created IStorage interface To represent storage items such as directory (folder), drive (disk), cached search result and other IStorage interface was created Worked on navigation to make it more easier and with less code

--- a/FileExplorer/Views/HomePage.xaml
+++ b/FileExplorer/Views/HomePage.xaml
@@ -20,7 +20,7 @@
     </Page.Resources>
 
     <Grid>
-        <GridView ItemsSource="{x:Bind ViewModel.Drives}" 
+        <GridView ItemsSource="{x:Bind ViewModel.ObservableDrives}" 
                   SelectionMode="Single"
                   ItemTemplate="{StaticResource DrivesTemplate}">
             <interactivity:Interaction.Behaviors>
