NavigationView invoked items now notify what kind of storage they were navigating into

--- a/FileExplorer/Views/ShellPage.xaml
+++ b/FileExplorer/Views/ShellPage.xaml
@@ -145,7 +145,7 @@
                     <interactivity:Interaction.Behaviors>
                         <interactivity:BehaviorCollection>
 
-                            <navigationBehaviors:NavigationBehavior />
+                            <navigationBehaviors:NavigationBehavior ItemInvokedCommand="{x:Bind ViewModel.SelectMenuItemCommand}" />
 
                             <general:LoadingCommandBehavior Command="{x:Bind ViewModel.NavigationPaneViewModel.InitializeCommand}" />
 
