Updated search logic to be able to optimize search if needed
For now search has no good optimizations
All IStorage items now have search options parameter to call search method more easily

--- a/FileExplorer/Views/ShellPage.xaml
+++ b/FileExplorer/Views/ShellPage.xaml
@@ -159,6 +159,7 @@
 
                 <Grid Column="2">
                     <Frame  x:Name="NavigationFrame" />
+                    <userControls:CommandedInfoBar />
                 </Grid>
 
             </Grid>
