--- a/FileExplorer/Views/ShellPage.xaml
+++ b/FileExplorer/Views/ShellPage.xaml
@@ -158,8 +158,17 @@
                     ResizeBehavior="PreviousAndNext" />
 
                 <Grid Column="2">
-                    <Frame  x:Name="NavigationFrame" />
-                    <userControls:CommandedInfoBar />
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Grid Margin="0 10 0 0"  Padding="15 5">
+                        <userControls:FileOperationsToolbar />
+                    </Grid>
+                    <Frame Grid.Row="1"  x:Name="NavigationFrame" />
+                    <userControls:CommandedInfoBar Grid.Row="1" />
                 </Grid>
 
             </Grid>
