--- a/FileExplorer/Views/HomePage.xaml
+++ b/FileExplorer/Views/HomePage.xaml
@@ -33,64 +33,78 @@
         </DataTemplate>
     </Page.Resources>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+    <ScrollViewer>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-        <Expander HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch" Header="Libraries">
-            <Expander.Resources>
-                <SolidColorBrush x:Key="customExpanderHeaderBackgroundColor" Color="Transparent"/>
-                <StaticResource x:Key="ExpanderHeaderBackground" ResourceKey="customExpanderHeaderBackgroundColor" />
-            </Expander.Resources>
+            <Expander HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch" Header="Libraries" IsExpanded="True">
+                <Expander.Resources>
+                    <SolidColorBrush x:Key="customExpanderHeaderBackgroundColor" Color="Transparent"/>
+                    <StaticResource x:Key="ExpanderHeaderBackground" ResourceKey="customExpanderHeaderBackgroundColor" />
+                </Expander.Resources>
 
-            <GridView ItemsSource="{x:Bind ViewModel.Libraries}"
-                                       SelectionMode="Single"
-                                       ItemTemplate="{StaticResource LibrariesTemplate}"
-                                       HorizontalContentAlignment="Stretch"
-                                       HorizontalAlignment="Stretch">
-                <interactivity:Interaction.Behaviors>
-                    <collections:DirectoryItemDoubleClickBehavior Command="{x:Bind ViewModel.FileOperations.OpenCommand}" />
+                <GridView ItemsSource="{x:Bind ViewModel.Libraries}"
+                                      SelectionMode="Single"
+                                      ItemTemplate="{StaticResource LibrariesTemplate}"
+                                      HorizontalContentAlignment="Stretch"
+                                      HorizontalAlignment="Stretch">
+                    <interactivity:Interaction.Behaviors>
+                        <collections:DirectoryItemDoubleClickBehavior Command="{x:Bind ViewModel.FileOperations.OpenCommand}" />
+                    </interactivity:Interaction.Behaviors>
+                </GridView>
+
+                <!--<ItemsRepeater ItemsSource="{x:Bind ViewModel.Libraries}"
+                          ItemTemplate="{StaticResource LibrariesTemplate}">
+                       <ItemsRepeater.Layout>
+                           <UniformGridLayout Orientation="Horizontal" ItemsJustification="SpaceAround"  />
+                       </ItemsRepeater.Layout>
+                   </ItemsRepeater>-->
+                    <interactivity:Interaction.Behaviors>
+                    <general:LoadingCommandBehavior Command="{x:Bind ViewModel.InitializeLibrariesThumbnailsCommand}" />
                 </interactivity:Interaction.Behaviors>
-            </GridView>
+            </Expander>
 
-            <!--<ItemsRepeater ItemsSource="{x:Bind ViewModel.Libraries}"
-                           ItemTemplate="{StaticResource LibrariesTemplate}">
-                <ItemsRepeater.Layout>
-                    <UniformGridLayout Orientation="Horizontal" ItemsJustification="SpaceAround"  />
-                </ItemsRepeater.Layout>
-            </ItemsRepeater>-->
-        </Expander>
+            <Expander Grid.Row="1" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" Header="Drives" IsExpanded="True">
+                <Expander.Resources>
+                    <SolidColorBrush x:Key="customExpanderHeaderBackgroundColor" Color="Transparent"/>
+                    <StaticResource x:Key="ExpanderHeaderBackground" ResourceKey="customExpanderHeaderBackgroundColor" />
+                </Expander.Resources>
 
-        <Expander Grid.Row="1" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" Header="Drives">
-            <Expander.Resources>
-                <SolidColorBrush x:Key="customExpanderHeaderBackgroundColor" Color="Transparent"/>
-                <StaticResource x:Key="ExpanderHeaderBackground" ResourceKey="customExpanderHeaderBackgroundColor" />
-            </Expander.Resources>
+                <GridView ItemsSource="{x:Bind ViewModel.Drives}" 
+                     SelectionMode="Single"
+                     ItemTemplate="{StaticResource DrivesTemplate}">
 
-            <GridView ItemsSource="{x:Bind ViewModel.Drives}" 
-                      SelectionMode="Single"
-                      ItemTemplate="{StaticResource DrivesTemplate}">
+                    <interactivity:Interaction.Behaviors>
+                        <collections:DirectoryItemDoubleClickBehavior Command="{x:Bind ViewModel.FileOperations.OpenCommand}" />
+                    </interactivity:Interaction.Behaviors>
+                </GridView>
 
                 <interactivity:Interaction.Behaviors>
-                    <collections:DirectoryItemDoubleClickBehavior Command="{x:Bind ViewModel.FileOperations.OpenCommand}" />
+                    <general:LoadingCommandBehavior Command="{x:Bind ViewModel.InitializeDrivesThumbnailsCommand}" />
                 </interactivity:Interaction.Behaviors>
-            </GridView>
+            </Expander>
 
-        </Expander>
+            <Expander Grid.Row="2" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" Header="Recent">
+                <Expander.Resources>
+                    <SolidColorBrush x:Key="customExpanderHeaderBackgroundColor" Color="Transparent"/>
+                    <StaticResource x:Key="ExpanderHeaderBackground" ResourceKey="customExpanderHeaderBackgroundColor" />
+                </Expander.Resources>
 
-        <Expander Grid.Row="2" HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" Header="Recent">
-            <Expander.Resources>
-                <SolidColorBrush x:Key="customExpanderHeaderBackgroundColor" Color="Transparent"/>
-                <StaticResource x:Key="ExpanderHeaderBackground" ResourceKey="customExpanderHeaderBackgroundColor" />
-            </Expander.Resources>
-
-        </Expander>
-
-        <interactivity:Interaction.Behaviors>
-            <general:LoadingCommandBehavior Command="{x:Bind ViewModel.InitializeCommand}" />
-        </interactivity:Interaction.Behaviors>
-    </Grid>
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="Text" />
+                    <TextBlock Text="Text" />
+                    <TextBlock Text="Text" />
+                    <TextBlock Text="Text" />
+                    <TextBlock Text="Text" />
+                    <TextBlock Text="Text" />
+                    <TextBlock Text="Text" />
+                    <TextBlock Text="Text" />
+                </StackPanel>
+            </Expander>
+        </Grid>
+    </ScrollViewer>
 </Page>
