Fixed issue with route not being updated when storage is navigated

--- a/FileExplorer/Views/HomePage.xaml
+++ b/FileExplorer/Views/HomePage.xaml
@@ -21,7 +21,7 @@
         </DataTemplate>
 
         <DataTemplate x:DataType="windows:DirectoryWrapper" x:Key="LibrariesTemplate">
-            <Grid>
+            <Grid Padding="0 5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
