Fixed seanding search message 2 times, now it is as should be 1. Moved search bar logic into its own user control

--- a/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
+++ b/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
@@ -13,54 +13,6 @@
     xmlns:generalBehaviors="using:FileExplorer.UI.Behaviors.General"
     mc:Ignorable="d">
 
-    <UserControl.Resources>
-        <MenuFlyout x:Key="SearchOptions" Placement="BottomEdgeAlignedRight">
-
-            <MenuFlyoutItem Text="Reset search options" Command="{x:Bind ViewModel.SearchOperator.ResetOptionsCommand}"/>
-
-            <MenuFlyoutSeparator />
-
-            <ToggleMenuFlyoutItem Text="All nested folders" IsChecked="{x:Bind ViewModel.SearchOperator.IsNestedSearch, Mode=TwoWay}">
-                <ToggleMenuFlyoutItem.Icon>
-                    <FontIcon FontSize="14" Glyph="&#xED25;" />
-                </ToggleMenuFlyoutItem.Icon>
-            </ToggleMenuFlyoutItem>
-
-            <MenuFlyoutSeparator />
-
-            <MenuFlyoutSubItem Text="Modification date">
-                <MenuFlyoutSubItem.Icon>
-                    <FontIcon FontSize="14" Glyph="&#xEC92;" />
-                </MenuFlyoutSubItem.Icon>
-
-                <interactivity:Interaction.Behaviors>
-                    <behaviors:InitializeWithItemsBehavior MenuSubItems="{x:Bind ViewModel.SearchOperator.DateSearchOptions}" />
-                </interactivity:Interaction.Behaviors>
-            </MenuFlyoutSubItem>
-
-            <MenuFlyoutSubItem Text="Type">
-                <MenuFlyoutSubItem.Icon>
-                    <FontIcon FontSize="14" Glyph="&#xE97C;" />
-                </MenuFlyoutSubItem.Icon>
-
-                <MenuFlyoutSubItem.Items>
-                    <MenuFlyoutItem Text="Types"  />
-                </MenuFlyoutSubItem.Items>
-            </MenuFlyoutSubItem>
-
-            <MenuFlyoutSubItem Text="Size">
-                <MenuFlyoutSubItem.Icon>
-                    <FontIcon FontSize="14" Glyph="&#xE97C;" />
-                </MenuFlyoutSubItem.Icon>
-
-                <interactivity:Interaction.Behaviors>
-                    <behaviors:InitializeWithItemsBehavior MenuSubItems="{x:Bind ViewModel.SearchOperator.SizeSearchOptions}" />
-                </interactivity:Interaction.Behaviors>
-            </MenuFlyoutSubItem>
-
-        </MenuFlyout>
-    </UserControl.Resources>
-
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="160" />
@@ -137,66 +89,7 @@
             </interactivity:Interaction.Behaviors>
 
         </Grid>
-        <Grid Column="2" Padding="5 0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="40" />
-                <ColumnDefinition Width="40" />
-                <ColumnDefinition Width="40" />
-            </Grid.ColumnDefinitions>
-            <TextBox VerticalAlignment="Center" TextWrapping="Wrap"
-                     Padding="5  2"
-                     Text="{x:Bind ViewModel.SearchOperator.SearchQuery, Mode=TwoWay, 
-                                        UpdateSourceTrigger=PropertyChanged}">
-                <interactivity:Interaction.Behaviors>
 
-                    <toolkitBehaviors:KeyDownTriggerBehavior Key="Enter">
-                        <core:InvokeCommandAction  Command="{x:Bind ViewModel.SearchOperator.InitiateSearchCommand}" />
-                    </toolkitBehaviors:KeyDownTriggerBehavior>
-
-                </interactivity:Interaction.Behaviors>
-            </TextBox>
-            <Grid Column="0" Padding="12  0">
-                <FontIcon HorizontalAlignment="Right" FontSize="14" Glyph="&#xE721;" />
-            </Grid>
-
-            <Button Grid.Column="1"
-                    ToolTipService.ToolTip="Start search"
-                    ToolTipService.Placement="Bottom"
-                    Command="{x:Bind ViewModel.SearchOperator.InitiateSearchCommand}"
-                    Visibility="{x:Bind ViewModel.SearchOperator.IsSearchRunning, Mode=OneWay, 
-                        Converter = {StaticResource BoolToVisibilityConverter}, 
-                        ConverterParameter=True}"
-                    Style="{StaticResource SmallIconButton}">
-                <FontIcon FontSize="16" Glyph="&#xE768;" />
-            </Button>
-
-            <Button Grid.Column="1"
-                    ToolTipService.ToolTip="Stop search"
-                    ToolTipService.Placement="Bottom"
-                    Visibility="{x:Bind ViewModel.SearchOperator.IsSearchRunning, Mode=OneWay, 
-                     Converter = {StaticResource BoolToVisibilityConverter}}"
-                    Command="{x:Bind ViewModel.SearchOperator.StopSearchCommand}"
-                    Style="{StaticResource SmallIconButton}">
-                <FontIcon FontSize="13" Glyph="&#xE71A;" />
-            </Button>
-
-            <Button Grid.Column="2"
-                    ToolTipService.ToolTip="Search options"
-                    ToolTipService.Placement="Bottom"
-                    Flyout="{StaticResource SearchOptions}"
-                    Style="{StaticResource SmallIconButton}">
-                <FontIcon FontSize="16" Glyph="&#xE712;" />
-            </Button>
-
-
-            <Button Grid.Column="3"
-                    ToolTipService.ToolTip="Settings"
-                    ToolTipService.Placement="Bottom"
-                    Click="OnSettingsButtonClick"
-                    Style="{StaticResource SmallIconButton}">
-                <FontIcon FontSize="16" Glyph="&#xE713;" />
-            </Button>
-        </Grid>
+        <local:SearchControl Grid.Column="2" />
     </Grid>
 </UserControl>
